:bug: Fix: remove extra space of class in plugin/link.html and use clamp fucntion for card link width

--- a/assets/css/_shortcodes/_cardlink.scss
+++ b/assets/css/_shortcodes/_cardlink.scss
@@ -8,7 +8,7 @@
   display: block;
   margin: 0.5rem auto;
   box-sizing: border-box;
-  width: 400px;
+  width: clamp(50%, 400px, 100%);
   max-width: 100%;
   overflow: hidden;
   text-decoration: none;
